k8_skeleton/kubernetes_files/k8_app_py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-app-py-deployment
  namespace: default
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: k8-app-py-pod
  template:
    metadata:
      labels:
        app: k8-app-py-pod
    spec:
      containers: 
      - image: "gcr.io/www-eaga/k8_app_py:vp.0.0.1c"
      #- image: "poxstone/k8_app_py:vp.0.0.1c"
        name: k8-app-py-container
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: "/volume-py/"
          name: app-py-volume
      volumes:
      - name: app-py-volume
        persistentVolumeClaim:
          claimName: app-py-volume-claim
          readOnly: false
