k8_skeleton/kubernetes_files/k8_letsencrypt_res.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-letsencrypt-res-deployment
  namespace: default
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: k8-letsencrypt-res-pod
  template:
    metadata:
      labels:
        app: k8-letsencrypt-res-pod
    spec:
      containers: 
      - image: "gcr.io/www-eaga/k8_letsencrypt_res:vl.0.0.1a"
      #- image: "poxstone/k8_app_py:vl.0.0.1a"
        name: k8-letsencrypt-res-container
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
