k8_skeleton/kubernetes_files/k8_serv_js.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8-serv-js-deployment
  namespace: default
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: k8-serv-js-pod
  template:
    metadata:
      labels:
        app: k8-serv-js-pod
    spec:
      containers: 
      - image: "gcr.io/www-eaga/k8_serv_js:vp.0.0.1c"
      #- image: "poxstone/k8_serv_js:vp.0.0.1c"
        name: k8-serv-js-container
        ports:
        - containerPort: 4000
          name: http
          protocol: TCP
