k8_skeleton/kubernetes_files/k8_app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-app-ingress
  #annotations:
    #beta.cloud.google.com/backend-config:
      #'{"ports": {"http":"config-http", "http2" :"config-http2"}, "default": "k8-app-ingress-backendconfig"}'
    #kubernetes.io/ingress.global-static-ip-name: my-name-address
spec:
  #tls:
  #- hosts:
  #  - dev.mydomain.com.co
  #  secretName: k8-app-ssl-secrets
  defaultBackend:
    service:
      name: k8-app-py-service
      port:
        number: 8080
  rules:
  - http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-app-py-service
            port:
              number: 8080
      
      - path: "/sql/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-serv-js-service
            port:
              number: 8080
      
      - path: "/redis/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-serv-js-service
            port:
              number: 8080

      - path: "/.well-known/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: k8-letsencrypt-res-service
            port:
              number: 8080
